# porg

./: .gitignore  ChangeLog  FindProcessByName_test.c  HTTP.c  HTTP.h  INSTALL  Makefile.am  Makefile.in  Makefile.msvc  Makefile64.msvc  README  README.md  config.h.in  configure  configure.ac  makefile  makefile.msvc  mem_utils.h  mingw_addons.h  oracle_sym.c  oracle_sym.h  porg_utils.c  porg_utils.h  test1.c  test1.correct  tests.sh
include/: Makefile.am  Makefile.in  porg_utils.h
lib/: Makefile.am  Makefile.in  mem_utils.c  porg_utils.c
tests/: FindProcessByName_test.c  Makefile.am  Makefile.in  run-porg_tests.sh  test1.correct
